--- a/opennms-config/pom.xml
+++ b/opennms-config/pom.xml
@@ -149,5 +149,10 @@
       <artifactId>org.opennms.features.config.mock</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.features.config</groupId>
+      <artifactId>org.opennms.features.config.mock</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
