--- a/opennms-config/pom.xml
+++ b/opennms-config/pom.xml
@@ -144,5 +144,11 @@
         </exclusion>
     </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.features.config</groupId>
+      <artifactId>org.opennms.features.config.mock</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
