--- a/core/ipc/twin/common/pom.xml
+++ b/core/ipc/twin/common/pom.xml
@@ -142,6 +142,11 @@
             <version>${protobufVersion}</version>
         </dependency>
         <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>${dropwizardMetricsVersion}</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
